// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`new --preset angular should generate necessary npm dependencies 1`] = `
Object {
  "dependencies": Object {
    "@nrwl/angular": "0.0.1",
  },
  "devDependencies": Object {
    "@nrwl/cli": "0.0.1",
    "@nrwl/workspace": "0.0.1",
    "nx": "0.0.1",
    "prettier": "^2.6.2",
    "typescript": "~4.7.2",
  },
  "license": "MIT",
  "name": "my-workspace",
  "private": true,
  "scripts": Object {
    "build": "nx build",
    "start": "nx serve",
    "test": "nx test",
  },
  "version": "0.0.0",
}
`;

exports[`new --preset empty should generate necessary npm dependencies 1`] = `
Object {
  "dependencies": Object {},
  "devDependencies": Object {
    "@nrwl/cli": "0.0.1",
    "@nrwl/workspace": "0.0.1",
    "nx": "0.0.1",
    "prettier": "^2.6.2",
    "typescript": "~4.7.2",
  },
  "license": "MIT",
  "name": "my-workspace",
  "private": true,
  "scripts": Object {
    "build": "nx build",
    "start": "nx serve",
    "test": "nx test",
  },
  "version": "0.0.0",
}
`;

exports[`new --preset react should generate necessary npm dependencies 1`] = `
Object {
  "dependencies": Object {},
  "devDependencies": Object {
    "@nrwl/cli": "0.0.1",
    "@nrwl/react": "0.0.1",
    "@nrwl/workspace": "0.0.1",
    "nx": "0.0.1",
    "prettier": "^2.6.2",
    "typescript": "~4.7.2",
  },
  "license": "MIT",
  "name": "my-workspace",
  "private": true,
  "scripts": Object {
    "build": "nx build",
    "start": "nx serve",
    "test": "nx test",
  },
  "version": "0.0.0",
}
`;

exports[`new should generate an empty nx.json 1`] = `
Object {
  "$schema": "./node_modules/nx/schemas/nx-schema.json",
  "affected": Object {
    "defaultBase": "main",
  },
  "implicitDependencies": Object {
    ".eslintrc.json": "*",
    "package.json": Object {
      "dependencies": "*",
      "devDependencies": "*",
    },
  },
  "npmScope": "npmScope",
  "targetDefaults": Object {
    "build": Object {
      "dependsOn": Array [
        "^build",
      ],
    },
  },
  "tasksRunnerOptions": Object {
    "default": Object {
      "options": Object {
        "cacheableOperations": Array [
          "build",
          "lint",
          "test",
          "e2e",
        ],
      },
      "runner": "nx/tasks-runners/default",
    },
  },
}
`;

exports[`new should generate an empty workspace.json 1`] = `
Object {
  "$schema": "./node_modules/nx/schemas/workspace-schema.json",
  "projects": Object {},
  "version": 2,
}
`;
